--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,8 +15,8 @@ body {
 }
 
 .swiper {
-  width: 90%;
-  height: 40rem;
+  width: 100%;
+  height: 45rem;
 }
 
 .swiper-slide {
@@ -57,17 +57,16 @@ body {
 
 .NavBar{
     height: 10vh;
-    background-color: rgb(124, 26, 26) !important;
+    background-color: rgb(255, 255, 255) !important;
     display: flex;
     justify-content: center;
     
   }
   
-
 .containerHero{
     width: 100%;
     height: 90vh;
-    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.657)), url(../assets/travel-5219496.jpg) !important;
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.750), rgba(0, 0, 0, 0.200)), url(../assets/travel-5219496.jpg) !important;
     background-size: initial;
     background-position: center;
     background-size: cover;
@@ -79,8 +78,8 @@ body {
   .containerLogo{
       margin: 2rem 5rem 2rem 0;
       padding: 10rem;
-      /* background-color: rgb(255, 255, 255); */
-      color: white;
+      background-color: rgba(255, 255, 255, 0.226);
+      color: #1E558C;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -100,8 +99,29 @@ body {
       text-align: center;
       margin-top: -.5rem;
       font-size: 1.5rem;
+      color: white;
   }
 
-.item{
-    background-color: aqua;
+.navItems{
+  font-size: 2rem;
+}
+
+.boxCallToAction{
+  width: 100%;
+  height: 50vh;
+  background-color: burlywood;
+}
+
+.boxFooter{
+  width: 100%;
+  height: 20vh;
+  background-color: burlywood;
+}
+
+.boxInProcess{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
