--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,66 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Oooh+Baby&family=Pragati+Narrow&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Archivo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-#app { height: 100% }
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
-
-.swiper {
-  width: 100%;
-  height: 45rem;
-}
-
-.swiper-slide {
-  font-size: 18px;
-  color: #fff;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 40px 60px;
-}
-
-.parallax-bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 130%;
-  height: 100%;
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.657)), url(../assets/panorama-2117310.jpg) !important;
-  background-size: initial;
-  -webkit-background-size: cover;
-  background-size: cover;
-  background-position: center;
-}
-
-.swiper-slide .title {
-  font-size: 41px;
-  font-weight: 300;
-}
-
-.swiper-slide .subtitle {
-  font-size: 21px;
-}
-
-.swiper-slide .text {
-  font-size: 14px;
-  max-width: 400px;
-  line-height: 1.3;
 }
 
 .NavBar{
@@ -85,6 +29,7 @@ body {
   display: flex;
   align-items: center;
   text-decoration: none;
+  font-family: 'Archivo', sans-serif;
 }
 
 .btnNav{
@@ -97,14 +42,17 @@ body {
 
 .btnNav:hover{
   color: white;
-  background-color: #F12B3B;
+  background-color: #03B5AA;
 }
   
 .containerHero{
     width: 100%;
     min-height: auto;
-    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.750), rgba(0, 0, 0, 0.200)), url(../assets/travel-5219496.jpg) !important;
+    padding-right: 5rem;
+    padding-left: 5rem;
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.500), rgba(0, 0, 0, 0.150)), url(../assets/panorama-2117310.jpg) !important;
     background-size: initial;
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     display: flex;
@@ -113,10 +61,11 @@ body {
   }
 
   .containerLogo{
-      margin: 2rem 5rem 2rem 0;
-      padding: 7rem 10rem;
+      max-width: 35rem;
+      margin: 2rem 0;
+      padding: 7rem 3rem;
       border-radius: 1rem;
-      background-color: rgba(255, 255, 255, 0.287);
+      background-color: rgba(128, 128, 128, 0.739);
       color: white;
       display: flex;
       flex-direction: column;
@@ -138,17 +87,18 @@ body {
   }
 
   .slogan{
-      width: 18rem;
+      max-width: 28rem;
       text-align: center;
       margin-top: -.5rem;
       font-size: 1.5rem;
       color: white;
+      font-family: 'Play', sans-serif;
   }
 
 .boxCallToAction{
   width: 100%;
   min-height: auto;
-  padding: 0 10rem;
+  padding: 1rem 10rem;
   background-color: white;
   font-size: 1.1rem;
   display: flex;
@@ -162,6 +112,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'Play', sans-serif;
+  font-size: 1.3rem;
 }
 
 .btnCall{
@@ -172,16 +124,20 @@ body {
   border: 1px solid black;
   border-radius: 5px;
   transition: 500ms;
+  font-family: 'Archivo', sans-serif;
 }
 
 .btnCall:hover{
   color: white;
-  background-color: #F12B3B;
+  background-color: #03B5AA;
 }
 
-.cabaña{
+.imgCall{
   margin: 1.5rem 0;
-  width: 630px;
+  min-width: 25rem;
+  min-height: 20rem;
+  max-width: 35rem;
+  max-height: 25rem;
   border-radius: 1rem;
 }
 
@@ -195,9 +151,15 @@ body {
 
 }
 
+.boxNavFooter{
+  min-height: 7rem;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
 .info{
   max-width: 70%;
-  /* background-color: rgba(255, 0, 0, 0.411); */
   width: 100%;
   padding: 1rem;
   margin-top: 2rem;
@@ -206,6 +168,13 @@ body {
   justify-content: space-between;
   border-top: 1px solid gray;
   border-bottom: 1px solid gray;
+  font-family: 'Play', sans-serif;
+  line-height: 1.3rem;
+}
+
+.boxInfo{
+  min-width: 11rem;
+  margin-right: 2rem;
 }
 
 .cierre{
@@ -216,6 +185,7 @@ body {
   display: flex;
   justify-content: space-between; 
   align-items: center;
+  font-family: 'Play', sans-serif;
 }
 
 .boxInProcess{
@@ -228,6 +198,16 @@ body {
 
 .nombreLogo{
   font-family: 'Oooh Baby', cursive;
-  color: #F12B3B;
+  color: #03B5AA;
   margin-bottom: 1rem;
+}
+
+.tittleCarousel{
+  text-align: center;
+  font-size: 2rem;
+  padding-bottom: 1rem;
+  font-family: 'Play', sans-serif;
+  font-size: 2.5rem;
+  color: #03B5AA;
+
 }
