--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oooh+Baby&family=Pragati+Narrow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -8,6 +9,7 @@
 }
 
 .NavBar{
+    width: 100%;
     height: 10vh;
     padding: 0 3rem;
     background-color: white;
@@ -190,10 +192,14 @@
 
 .boxInProcess{
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  background-color: rgba(202, 202, 202, 0.678);
   display: flex;
   justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  
+
+
 }
 
 .nombreLogo{
@@ -211,3 +217,4 @@
   color: #03B5AA;
 
 }
+
