Input de busqueda en correcto funcionamiento con vinculacion a mi database

--- a/src/styles/cardCities.css
+++ b/src/styles/cardCities.css
@@ -2,7 +2,7 @@
 
 .cardDinamic{
     width: 90% !important;
-    max-height: 90% !important;
+    max-height: 32rem !important;
     margin: 2rem;
   }
 
