--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -18,7 +18,7 @@ body {
 .boxSwiper{
   width: 100%;
   height: 90vh;
-  background-color: rgba(187, 187, 187, 0.664);
+  background-color: #1800852d;
 }
 
 .swiper {
