--- a/src/styles/itineraries.css
+++ b/src/styles/itineraries.css
@@ -8,37 +8,41 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: cornflowerblue;
+    min-height: auto;
+    padding: 5rem 0;
 }
 
 .card{
     position: relative;
     width: 80rem;
     /* height: 400px; */
-    height: 120px;
+    height: 220px;
     overflow: hidden;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 50px 50px rgba(0, 0, 0, 0.2);
     padding: 20px;
     transition: height 0.5s ease-in-out ;
+    font-family: Helvetica, sans-serif;
 }
 
 .card.active{
-    height: 400px;
+    height: 600px;
 }
 
 .card .content{
+    min-height: 180px;
+    margin-left: 10px;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .card .content .profile{
     position: relative;
-    width: 75px;
-    height: 75px;
-    border-radius: 50px;
+    width: 125px;
+    height: 125px;
+    border-radius: 84px;
     overflow: hidden;
 }
 
@@ -51,16 +55,46 @@
     object-fit: cover;
 }
 
-.card .content h2{
-    margin-left: 15px;
+.card .content .tittles{
+    margin-left: 20px;
     font-size: 400;
+}
+
+.card .content .hashAndDesc{
+    text-align: center;
+    margin-left: 30px;
+    font-size: 400;
+}
+
+.desc{
+    color: rgba(128, 128, 128, 0.705);
+}
+
+.hash{
+    color:#2275fa
+}
+
+.icons{
+    margin-left: 6rem;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.icons p{
+    margin-left: 6rem;
+}
+
+.iconLike{
+    width: 40px;
+    height: 40px;
 }
 
 .nav{
     position: relative;
-    top: 25px;
+    top: 30px;
     border-top: 1px solid rgba(0, 0, 0, 0.212);
-    padding: 20px 0;
+    padding: 10px 0;
     display: flex;
     flex-direction: column;
 }
@@ -84,7 +118,7 @@
     right: 20px;
     width: 20px;
     height: 20px;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,61 +138,104 @@
 }
 
 
-/* estyles for button */
-.btn {
-    --color: #00A97F;
-    --color2: rgb(10, 25, 30);
-    padding: 0.8em 1.75em;
-    background-color: transparent;
-    border-radius: 6px;
-    border: .3px solid var(--color);
-    transition: .5s;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-    z-index: 1;
-    font-weight: 300;
-    font-size: 17px;
-    font-family: 'Roboto', 'Segoe UI', sans-serif;
-    text-transform: uppercase;
-    color: var(--color);
-   }
-   
-   .btn::after, .btn::before {
-    content: '';
-    display: block;
-    height: 100%;
-    width: 100%;
-    transform: skew(90deg) translate(-50%, -50%);
-    position: absolute;
-    inset: 50%;
-    left: 25%;
-    z-index: -1;
-    transition: .5s ease-out;
-    background-color: var(--color);
-   }
-   
-   .btn::before {
-    top: -50%;
-    left: -25%;
-    transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
-   }
-   
-   .btn:hover::before {
-    transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
-   }
-   
-   .btn:hover::after {
-    transform: skew(45deg) translate(-50%, -50%);
-   }
-   
-   .btn:hover {
-    color: var(--color2);
-   }
-   
-   .btn:active {
-    filter: brightness(.7);
-    transform: scale(.98);
-   }
+@media (max-width: 1144px){
+    .card{
+        height: 250px;
+    }
+
+    .card .content{
+        margin: 0;
+    }
+
+    .content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .card .content .tittles{
+        margin: 7px 30px;
+    }
+
+    .card .content .hashAndDesc{
+        margin: 20px 0;
+    }
+
+    .card .content .icons{
+        margin: 7px 0 0 50px;
+    }
+    
+    .card.active{
+        height: 800px;
+    }
+
+    .nav{
+        top: 90px;
+        padding: 10px 0;
+    }
+}
+
+
+@media (max-width: 750px){
+    .card{
+        height: 300px;
+    }
+
+    .card .content .hashAndDesc{
+        margin: 20px 0;
+    }
+}
+
+
+@media (max-width: 644px){
+    .card{
+        height: 370px;
+    }
+
+    .card .content .hashAndDesc{
+        margin: 20px 0;
+    }
+
+    .card .content .icons{
+        margin: 7px 30px;
+    }
+
+    .nav{
+        top: 87px;
+        padding: 10px 0;
+    }
+}
+
+
+@media (max-width: 494px){
+    .card{
+        height: 440px;
+    }
+
+    .card .content .tittles{
+        margin: 10px 30px;
+    }
+
+    .card .content .hashAndDesc{
+        margin: 7px 0;
+    }
+
+    .card .content .icons{
+        margin: 7px 0;
+    }
+
+    .tittles{
+        margin: 0;
+        text-align: center;
+    }
+
+    .nav{
+        top: 85px;
+        padding: 10px 0;
+    }
+}
+
+
+
 
 
