--- a/src/styles/heroDetails.css
+++ b/src/styles/heroDetails.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
 
 .containerHeroDetails{
     width: 100%;
@@ -15,9 +16,10 @@
   }
 
 .city{
-    font-size: 5rem;
+    font-size: 7rem;
     color: white;
     text-align: center;
+    font-family: 'Parisienne', cursive;
 }
 
 .containerDinamic{
