--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -226,6 +226,14 @@
   color: #03B5AA;
 }
 
+.noResults{
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 @media (max-width: 500px) { 
   .containerHero{
