--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -262,3 +262,10 @@
   background-color: #03B5AA;
   color: white;
 }
+
+.userImage{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
