--- a/src/styles/itineraries.css
+++ b/src/styles/itineraries.css
@@ -10,6 +10,7 @@
     align-items: center;
     min-height: auto;
     padding: 5rem 0;
+    flex-direction: column;
 }
 
 .card{
@@ -96,7 +97,10 @@
     border-top: 1px solid rgba(0, 0, 0, 0.212);
     padding: 10px 0;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
 }
 
 .nav li{    
